update to join link

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
 	</div>
 	<section class="content row">
 		<div class="large-12 columns">
-			<h2 class="subtitle">Join me at: calmlycoding.com/spo-debug </h2>
+			<h2 class="subtitle">Join me at: calmlycoding.com:7777 </h2>
 		</div>
 	</section>
 </div>
